created filter for genre

--- a/index.html
+++ b/index.html
@@ -25,7 +25,15 @@
 <body>
     <div id="root">
         <header class="bg-dark">
-            
+            <form action="index.php" method="GET">
+                <select class="w-50" name="genre" class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+                    <option selected>Open this select menu</option>
+                    <option value="1">Rock</option>
+                    <option value="2">Two</option>
+                    <option value="3">Three</option>
+                  </select>
+                  <button type="submit" >Filter </button>
+            </form>
         </header>
         <body>
             <div class="container p-5">
