changed name of the php file

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <img src="img/logo.png" alt="" class="img-fluid" id="logo">
                 </figure>
     
-                <form action="index.php" method="GET">
+                <form action="api.php" method="GET">
                     <select v-model="genre" @change="changeGenre" name="genre" id="genre" class="form-select">
                         <option selected value="">All </option>
                         <option v-for="genre in genres" :key="genre" :value="genre">{{genre}}</option>
